# tom-text-toolbox

./: 404.html  LICENSE  README.md  index.html  liwc_captions.csv  liwc_combined.csv  mkdocs.yml  objects.inv  processed_captions.csv  pyproject.toml  requirements.txt  sitemap.xml  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: installation.yml
changelog/: index.html
common/: index.html
contributing/: index.html
docs/: Text Toolkit Notes.docx  common.md  contributing.md  index.md  installation.md  tom_text_toolbox.md  usage.md
examples/intro/: index.html
faq/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_tom_text_toolbox.py
tom_text_toolbox/: __init__.py  analysis.py  dictionaries.py  familiarity.py  hedonometer.py  index.html  liwc.py  main.py  mind_miner.py  mistakes.py  notifications.py  ordenes_scores.py  passive_voice.py  spacy_measures.py  syntatic_complexity.py  text_data_TEST.csv  tokenizer.py  tom_text_toolbox.py  tom_text_toolbox_analysis.py  whissell.py
tom_text_toolbox/dictionaries/: ac_brysbaert_dict.csv  regulatory-mode-dictionary.dicx  term_dict.json  term_dictionaries.py
tom_text_toolbox/features/: figurative_speech_scores.py  levdist_scores.py  liwc_scores.py  message_balance_score.py  mistakes_score.py  passive_voice_score.py  readability_score.py  spacy_measure_scores.py
tom_text_toolbox/features_in_progress/: spacy_measures -- OLD.py  zeroshot -- TEST.py
tom_text_toolbox/linguistic_dictionaries/: cb_ratio.json  term_dict.json  whissell_dict.csv
tom_text_toolbox/linguistic_features/: abstract_concrete_score.py  dictionary_scores.py  familiarity_score.py  liwc_scores.py  nrc_scores.py  spacy_measure_scores.py  whissell_scores.py
tom_text_toolbox/scripts/: dictionary_scores.py  (+5 more)
usage/: index.html
(+8 files in other folders)
