[project]
name = "tom-text-toolbox"
version = "0.0.1"
dynamic = [
    "dependencies",
]
description = "A python package for textual and lingusitic analysis"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "tom-text-toolbox",
]
license = {text = "MIT License"}
authors = [
  {name = "Thomas Young", email = "thomasyoung0416@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
tom_text_toolbox = "tom_text_toolbox.cli:main"

[project.optional-dependencies]
all = [
    "tom-text-toolbox[extra]",
]

extra = [
    "pandas",
]


[tool]
[tool.setuptools.packages.find]
include = ["tom_text_toolbox*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "tom_text_toolbox/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/thomasyyyyy/tom-text-toolbox"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"